# cotext

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: cotext-sync.md  cotext.md
.claude/skills/cotext-context/: SKILL.md
.codex/skills/cotext-context/: SKILL.md
.codex/skills/cotext-context/agents/: openai.yaml
.cotext/: cotext.toml
.cotext/agents/codex/cotext-context/: SKILL.md
.cotext/agents/codex/cotext-context/agents/: openai.yaml
.cotext/entries/deferred/roadmap/future/: remote-sync-and-collaboration-backend.md
.cotext/entries/design/architecture/storage/: canonical-context-packet-and-storage-model.md
.cotext/entries/note/agents/setup/: agent-integrations-are-project-local-by-default.md
.cotext/entries/progress/agents/docs/: detailed-agent-workflow-docs-and-skills-landed.md
.cotext/entries/progress/automation/release/: ci-hooks-and-publish-automation-landed.md
.cotext/entries/progress/implementation/mvp/: cli-render-pipeline-and-tui-mvp-landed.md
.cotext/entries/todo/tui/roadmap/: add-richer-metadata-editing-in-the-tui.md
.github/workflows/: ci.yml  publish.yml
docs/: agent-workflow.md
src/: agents.rs  cli.rs  lib.rs  main.rs  model.rs  render.rs  storage.rs  tui.rs
