[package]
name = "cotext"
version = "0.1.3"
edition = "2024"
description = "Structured project context for humans and coding agents, with a CLI and ratatui TUI."
readme = "README.md"
documentation = "https://docs.rs/cotext"
homepage = "https://github.com/inmzhang/cotext"
repository = "https://github.com/inmzhang/cotext"
keywords = ["context", "cli", "tui", "agents", "productivity"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".claude/**", ".codex/**", ".cotext/**", ".github/**"]
license = "MIT"

[dependencies]
anyhow = "1.0.97"
arboard = "3.4.1"
chrono = { version = "0.4.40", features = ["clock", "serde"] }
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
toml = "0.8.20"
tui-textarea = "0.7.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.18.0"
